foundry_deployment/infra/k8s/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-stack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
