foundry_deployment/infra/k8s/monitoring/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: grafana
spec:
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus-stack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
